This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Compiling Python 2.7.10 Error on Unixware 7.1.4
Type: compile error Stage: resolved
Components: Build Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: python-dev, r.david.murray, ronbarak, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2015-07-11 13:33 by ronbarak, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
issue24611.patch serhiy.storchaka, 2015-07-11 18:22 review
issue24611.PNG ronbarak, 2015-07-12 11:00 Screenshot of failure in patch pplication
Messages (7)
msg246604 - (view) Author: Ron Barak (ronbarak) * Date: 2015-07-11 13:33
I wanted to add Python 2.7 to Unix.
I downloaded the sources to the VirtualBox on which the Unix is installed and run

./configure --prefix=/usr       \
            --enable-shared     \
            --with-system-expat \

without problems.

However, when I try to run make, it fails on:

cc –Kpthread –Wl,-Bexport –o python Modules/python.o libpython2.7.a -lsocket –lnsl –lpthread –ldl –lm 

Undefined                       first referenced
symbol                              in file
_PyInt_FromDev                      libpython2.7.a(posixmodule.o)     
UX:ld: ERROR: Symbol referencing errors. No output written to python
*** Error code 1 (bu21)
UX:make: ERROR: fatal error.


Environment:

OS  Unixware 7.1.4
Python   2.7.10
CC  Optimizing C Compilation System (CCS) 4.2 05/11/04 (ux714.bl3af)
msg246605 - (view) Author: R. David Murray (r.david.murray) * (Python committer) Date: 2015-07-11 14:38
unixware is not a platform we support (we don't have a buildbot for it).  If you can figure out how to fix this and it isn't disruptive to the codebase, you can submit a patch.
msg246610 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-11 18:22
I think this simple patch should fix the issue.
msg246644 - (view) Author: Ron Barak (ronbarak) * Date: 2015-07-12 11:00
I tried to apply the patch. Alas, I get an "Hmm... I can't seem to find a patch in there anywhere." error. 

See attached screenshot.

Did I apply the patch incorrectly?
msg246645 - (view) Author: Ron Barak (ronbarak) * Date: 2015-07-12 11:20
When I try to apply the patch manually, namely - editing Modules/posixmodule.c, and moving the #endif a few lines up, the make finishes correctly.

So, the patch does work: I'm probably not applying it correctly.

Could you point to my error in applying the patch?
msg246651 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-07-12 13:41
New changeset d2b8354e87f5 by Serhiy Storchaka in branch '2.7':
Issue #24611: Fixed compiling the posix module on non-Windows platforms
https://hg.python.org/cpython/rev/d2b8354e87f5
msg246652 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-12 13:45
I'm not experienced with Unixware's version of the patch (perhaps it differs from Linux version), but try to use the -p1 option.
History
Date User Action Args
2022-04-11 14:58:18adminsetgithub: 68799
2015-07-12 13:45:15serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2015-07-12 13:45:01serhiy.storchakasetmessages: + msg246652
2015-07-12 13:41:54python-devsetnosy: + python-dev
messages: + msg246651
2015-07-12 11:20:54ronbaraksetmessages: + msg246645
2015-07-12 11:00:05ronbaraksetfiles: + issue24611.PNG

messages: + msg246644
2015-07-11 18:22:46serhiy.storchakasetfiles: + issue24611.patch
keywords: + patch
messages: + msg246610

stage: needs patch -> patch review
2015-07-11 14:38:40r.david.murraysetnosy: + r.david.murray
messages: + msg246605
2015-07-11 13:52:39serhiy.storchakasetassignee: serhiy.storchaka

nosy: + serhiy.storchaka
stage: needs patch
2015-07-11 13:33:07ronbarakcreate