Issue #24611: Fixed compiling the posix module on non-Windows platforms without mknod() or makedev() (e.g. on Unixware).