Modules/posixmodule.c
@@ -513,6 +513,8 @@ _Py_Dev_Converter(PyObject *obj, void *p)
     return 1;
 }
 
+#endif
+
 #ifdef HAVE_LONG_LONG
 static PyObject *
 _PyInt_FromDev(PY_LONG_LONG v)
@@ -524,8 +526,6 @@ _PyInt_FromDev(PY_LONG_LONG v)
 }
 #else
 #  define _PyInt_FromDev PyInt_FromLong
-#endif
-
 #endif
 
 
